[gd_scene load_steps=7 format=3 uid="uid://nwnyq8lslabo"]

[ext_resource type="Script" path="res://scenes/screen/result.gd" id="1_r7sav"]
[ext_resource type="FontFile" uid="uid://b407p00l3rndu" path="res://assets/PressStart2P-Regular.ttf" id="1_uuydb"]
[ext_resource type="Texture2D" uid="uid://cgdq33qirijsl" path="res://assets/enter.png" id="2_k4jfb"]
[ext_resource type="PackedScene" uid="uid://bubk63f8f6iu0" path="res://scenes/components/song_detail.tscn" id="4_f2jme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rmn3"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8x77"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7sav")

[node name="BottomSection" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -72.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="Border" type="ColorRect" parent="BottomSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0
offset_bottom = 8.0
grow_horizontal = 2

[node name="Label3" type="Label" parent="BottomSection"]
layout_mode = 2
offset_left = 56.0
offset_top = 24.0
offset_right = 376.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("1_uuydb")
theme_override_font_sizes/font_size = 20
text = "Continue"
vertical_alignment = 1

[node name="Enter" type="Sprite2D" parent="BottomSection"]
position = Vector2(32, 40)
texture = ExtResource("2_k4jfb")

[node name="TopSection" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 128.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="TopSection"]
layout_mode = 0
offset_top = 120.0
offset_right = 1280.0
offset_bottom = 128.0

[node name="SongDetail" parent="TopSection" instance=ExtResource("4_f2jme")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 289.0
grow_horizontal = 1

[node name="Control" type="Control" parent="TopSection"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StatsBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 576.0
offset_bottom = 431.0
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_5rmn3")

[node name="ColorRect" type="ColorRect" parent="StatsBox"]
layout_mode = 0
offset_left = 384.0
offset_right = 386.0
offset_bottom = 215.0

[node name="PerfectLabel" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 177.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("1_uuydb")
theme_override_font_sizes/font_size = 20
text = "Perfect"
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="StatsBox"]
layout_mode = 0
offset_top = 56.0
offset_right = 512.0
offset_bottom = 58.0

[node name="GreatLabel" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 69.0
offset_right = 177.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("1_uuydb")
theme_override_font_sizes/font_size = 20
text = "Great"
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="StatsBox"]
layout_mode = 0
offset_top = 112.0
offset_right = 512.0
offset_bottom = 114.0

[node name="GoodLabel" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 124.0
offset_right = 177.0
offset_bottom = 156.0
theme_override_fonts/font = ExtResource("1_uuydb")
theme_override_font_sizes/font_size = 20
text = "Good "
vertical_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="StatsBox"]
layout_mode = 0
offset_top = 162.0
offset_right = 512.0
offset_bottom = 164.0

[node name="MissLabel" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 173.0
offset_right = 177.0
offset_bottom = 205.0
theme_override_fonts/font = ExtResource("1_uuydb")
theme_override_font_sizes/font_size = 20
text = "Miss"
vertical_alignment = 1

[node name="PerfectCount" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 400.0
offset_top = 16.0
offset_right = 496.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1_uuydb")
text = "69"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GreatCount" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 400.0
offset_top = 72.0
offset_right = 496.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("1_uuydb")
text = "69"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoodCount" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 400.0
offset_top = 128.0
offset_right = 496.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("1_uuydb")
text = "69"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MissCount" type="Label" parent="StatsBox"]
layout_mode = 0
offset_left = 400.0
offset_top = 176.0
offset_right = 496.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("1_uuydb")
text = "69"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AccuracyBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 216.0
offset_right = 1216.0
offset_bottom = 539.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p8x77")

[node name="VFlowContainer" type="VSplitContainer" parent="AccuracyBox"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 323.0
split_offset = -6

[node name="Grade" type="Label" parent="AccuracyBox"]
layout_mode = 2
offset_right = 320.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("1_uuydb")
theme_override_font_sizes/font_size = 128
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="AccuracyBox"]
layout_mode = 2
offset_top = 228.0
offset_right = 320.0
offset_bottom = 232.0

[node name="Accuracy" type="Label" parent="AccuracyBox"]
layout_mode = 0
offset_top = 232.0
offset_right = 320.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("1_uuydb")
theme_override_font_sizes/font_size = 32
text = "96.42%"
horizontal_alignment = 1
vertical_alignment = 1
